# ChangeLog for net-proxy/ziproxy
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/ziproxy/ChangeLog,v 1.11 2007/10/05 23:08:23 sbriesen Exp $

*ziproxy-2.3.0 (05 Oct 2007)

  05 Oct 2007; Stefan Briesenick <sbriesen@gentoo.org>
  +files/ziproxy-2.3.0.diff, +files/ziproxy-2.3.confd,
  +files/ziproxy-2.3.initd, +ziproxy-2.3.0.ebuild:
  version bump.

  17 Jun 2007; Alin Năstac <mrness@gentoo.org> -files/ziproxy-2.1.confd,
  -files/ziproxy-2.1.initd, -ziproxy-2.1.1.ebuild:
  Remove old version.

*ziproxy-2.2.2 (11 May 2007)

  11 May 2007; Stefan Briesenick <sbriesen@gentoo.org>
  +files/ziproxy-2.2.confd, +files/ziproxy-2.2.initd, +ziproxy-2.2.2.ebuild:
  version bump.

  01 Oct 2006; Stefan Briesenick <sbriesen@gentoo.org>
  -files/ziproxy-2.0.confd, -files/ziproxy-2.0.initd, -ziproxy-2.0.0.ebuild:
  removed old version.

  13 Sep 2006; Jason Wever <weeve@gentoo.org> ziproxy-2.1.1.ebuild:
  Added ~sparc keyword wrt bug #139149.

*ziproxy-2.1.1 (08 Sep 2006)

  08 Sep 2006; Stefan Briesenick <sbriesen@gentoo.org>
  +files/ziproxy-2.1.confd, +files/ziproxy-2.1.initd, -files/ziproxy.confd,
  -files/ziproxy.initd, -ziproxy-1.5.2.ebuild, +ziproxy-2.1.1.ebuild:
  version bump, solving bugs #139486 and #143496, removing old version.

*ziproxy-2.0.0 (04 Jul 2006)

  04 Jul 2006; Stefan Briesenick <sbriesen@gentoo.org>
  +files/ziproxy-2.0.confd, +files/ziproxy-2.0.initd, +ziproxy-2.0.0.ebuild:
  version bump, solving bug #139135.

  06 Mar 2006; Alin Nastac <mrness@gentoo.org> -ziproxy-1.5.1.ebuild:
  Remove old version.

*ziproxy-1.5.2 (09 Jan 2006)

  09 Jan 2006; Stefan Briesenick <sbriesen@gentoo.org>
  +ziproxy-1.5.2.ebuild:
  version bump.

  08 Oct 2005; Stefan Briesenick <sbriesen@gentoo.org> files/ziproxy.confd,
  files/ziproxy.initd, ziproxy-1.5.1.ebuild:
  added RUNAS option in init-script.

*ziproxy-1.5.1 (07 Oct 2005)

  07 Oct 2005; Stefan Briesenick <sbriesen@gentoo.org> +files/ziproxy.confd,