@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/ziproxy/Attic/ziproxy-2.3.0.ebuild,v 1.1 2007/10/05 23:08:23 sbriesen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/ziproxy/Attic/ziproxy-2.3.0.ebuild,v 1.2 2007/10/06 01:42:46 sbriesen Exp $
 
 WANT_AUTOCONF="latest"
 WANT_AUTOMAKE="latest"
@@ -54,7 +54,7 @@ src_compile() {
 }
 
 src_install() {
-	make DESTDIR="${D}" install || die "make install failed"
+	emake DESTDIR="${D}" install || die "emake install failed"
 
 	dodir /usr/sbin
 	mv -f "${D}usr/bin/ziproxy" "${D}usr/sbin/ziproxy"
